open by default

--- a/words/08-other-display-types.Rmd
+++ b/words/08-other-display-types.Rmd
@@ -1,3 +1,4 @@
+Look at number 1: http://sunlightfoundation.com/opendataguidelines/
 
 ## Hip display types
 Let's focus on the things that are neither tables nor external links.
