--- a/words/07-open-by-default.Rmd
+++ b/words/07-open-by-default.Rmd
@@ -1,6 +1,22 @@
-Look at number 1: http://sunlightfoundation.com/opendataguidelines/
+The first of Sunlight Foundation's 32
+[Open Data Policy Guidelines](http://sunlightfoundation.com/opendataguidelines/)
+is to "Set The Default To Open".
 
-## Hip display types
+> Most public records systems, including the Freedom of Information Act itself, are systems of reactive disclosure -- meaning that a question has to be asked before an answer given; public information requested, before it is disclosed.
+>
+> Proactive disclosure is the opposite. Proactive disclosure is the release of public information -- online and in open formats (see Provisions 8 and 9) -- before it is asked for. This is no simple task, but, in a way, it’s what all "open data" is aiming to accomplish. Setting the default to open means that the government and parties acting on its behalf will make public information available proactively and that they’ll put that information within reach of the public (online), with low to no barriers for its reuse and consumption. Open formats may help us maximize on the value we can extract from certain kinds of public data today, but to ensure that data publishing is sustained and, in fact, made easier over time, we need to reset the default for how data is released and disclosed.
+>
+> Setting the default to open is about living up to the potential of our information, about looking at comprehensive information management, and making determinations that fall in the public interest. It’s about purely practical government improvements, too, and taking steps that not only keep government systems up to date, but ensure that we have the foresight to survive changes in technology that we can’t predict.
+>
+> Usually, for information to be defined as public, important restrictions have already been applied. Therefore, policy language can be used to outline that "all public data and information must be considered open and accessible." Whether listed as part of a statement of intent (as Austin, Texas does; a concept explored more in Provision 21), as direction to a new oversight authority (Provision 22), or as the underlying aim of new data guidance (Provision 20), openness by default is a critical tool in crafting open data policies that are both ambitious and sustainable.
+
+Software can encourage this practice of making data open by default.
+
+## Display types on Socrata portals
+I previously [downloaded](/!/socrata-summary) metadata about all of
+the datasets on all of the Socrata portals, and I continue to find
+interesting things in these data.
+
 Let's focus on the things that are neither tables nor external links.
 
 ```{r not_boring}
@@ -9,76 +25,7 @@ not.boring$displayType <- factor(not.boring$displayType, levels = names(sort(tab
 ggplot(not.boring) + aes(x = displayType) + geom_bar() + coord_flip()
 ```
 
-What are all of these types? Here are some examples.
-
-With so many types, I'm surprised that map and chart are pretty much the only ones that get used.
-I can see why few people would make APIs, but you'd think people would want to try making pie charts
-instead of the normal "chart".
-
-In hipster fashion, I think that maps and charts are overused, so
-I'm going to look at the cool ones that nobody has heard about.
-
-### Intensity map
-There is only one [intensitymap](https://opendata.socrata.com/dataset/Statewise-Prison-Population/dud8-q2qd?)
-among all of the views on all of the Socrata portals. I have no idea what it is, nor how to create one.
-I tried making a [heat map](https://opendata.socrata.com/Government/Tom-made-a-heat-map/h4cx-3gq9), but that
-gets the type "map" rather than "intensitymap". I guess they don't make these anymore.
-
-### Various charts
-The "*chart" types all seem to be real things.
-Here's a [piechart](https://opendata.socrata.com/dataset/By-County-Chart/66gq-2hse?).
-Look at my [area chart](https://opendata.socrata.com/dataset/Tom-makes-an-area-chart-/45sn-pggi)!
-I'm sure you can guess what the rest look like.
-
-One funny thing: I can't tell the difference between an
-[imagesparkline](https://opendata.socrata.com/Business/growth-chart-2/kefb-jf8u?)
-and a [linechart](https://opendata.socrata.com/dataset/Num-employees-by-sector-trend-chart/zwsx-hn97?).
-
-### Page
-A [page](https://explore.data.gov/dataset/OlaSW_WH/4yyz-msx7?)
-lets you look at one record at a time. People actually use this!
-Especially in Oregon.
-
-```{r page_portal}
-ggplot(subset(socrata, displayType == 'page')) + aes(x = portal) + geom_bar() + coord_flip()
-```
-
-Who's dwiese?
-
-```{r page_owner}
-ggplot(subset(socrata.distinct, displayType == 'page')) + aes(x = owner_displayName) + geom_bar() + coord_flip()
-```
-
-It seems that he made a few pages on explore.data.gov that were federated.
-
-    subset(socrata, displayType == 'page' & owner.displayName == 'dwiese')[c('portal', 'id')]
-
-Like [this one](https://explore.data.gov/dataset/OlaSW_WH/4yyz-msx7?)
-
-I'm still totally confused; I don't see why you would ever want one of these.
-Maybe it would be useful if you could get a URL for a particular page, but you
-can't even do that. Do people really use these?
-
-```{r page_use}
-ggplot(subset(socrata.distinct, displayType == 'page')) + aes(x = viewCount) + geom_histogram() +
-  scale_x_continuous('Hits per "page" (paginated dataset view type)') +
-  scale_y_continuous('Frequency', breaks = seq(0, 12, 4)) +
-  ggtitle("People don't really look at data in the \"page\" view.")
-```
-
-No, not really. Though that was more than I'd expected.
-
-### Fat row
-A [fatrow](https://electionsdata.kingcounty.gov/dataset/Attorney-General-table-General-Election-2012/2y5z-ffa8?)
-is something between a table and a page.
-
-### API
-Here's an [api](https://data.energystar.gov/Government/ENERGY-STAR-Certified-Geothermal-Heatpumps/2f83-p388?).
-I think it's an API built with the [API foundry](http://www.socrata.com/api-foundry/).
-It comes with automatic [documentation](https://data.energystar.gov/developers/docs/energy-star-certified-geothermal-heatpumps).
-
-
-## Things that you might not think of as open data
+## Surprising display types
 I was somewhat surprised to see forms and calendars in the portals.
 
 ### Form
